# docs

./: .envrc  .gitattributes  .gitignore  404.html  Makefile  README.md  RELEASE.md  default.sieve  dovecot.md  force-upgrade-to-10.cmd  imap-de-dupe.go  imapsync.md  index.html  lets-encrypt.md  markdown-style-guide.md  mkdocs.yml  postfix.md  puppet.md  pyproject.toml  remove-crapware.ps1  requirements.txt  saltstack.md  sitemap.xml  sphinx.rst  troubleshooting-pc.md  ubuntu-automatic-preseed-installation.md  windows-gaming.md  windows-issues.md  xen-template.md  xenserver.md  zensical.toml  zfs.md
.github/workflows/: docs.yml
app/authy/: index.html
app/bash/: index.html
app/chrome/: index.html
app/direnv/: index.html
app/firefox/: index.html
app/fish/: index.html
app/freecad/: index.html
app/git/: index.html
app/gpg/: index.html
app/movie_studio/: index.html
configuration-management/: puppet.md
docs/: README.md  glossary.html  icon-explanation.html  index.html  search.html  searchindex.js  sphinx-build.html  sphinx-style-guide.html  sphinx.html  style-guide.html
glossary/: index.html
search/: search_index.json
service/: index.html
services/: docker-service-template.md  template.md
shell-scripts/: copying-data.md  playon-to-mkv  video-editing-conversion.md  wiping-data.md  youtube.md
source/: glossary.rst  icon-explanation.rst  index.rst  sphinx-build.rst  sphinx-style-guide.rst  sphinx.rst  style-guide.rst
sphinx/: conf.py  requirements.txt
windows-scripts/: force-upgrade-to-10.cmd  remove-crapware.ps1
xen/: xenserver.md
(+3072 files in other folders)
