[project]
name = "docs"
version = "0.1.0"
requires-python = ">=3.14"
# Pin to click 8.2.1 until resolved
# https://github.com/mkdocs/mkdocs/issues/4014
dependencies = [
    "click==8.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.4",
    "pygments==2.20.0",
    "requests==2.33.1",
]
